Cubes Game version 1.0

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>game</title>
+    <title>Cubes</title>
   </head>
   <body>
     <nav>
@@ -26,7 +26,7 @@
       </div>
       <div class="results">
         <div class="result-title">
-          <h1>Best results</h1>
+          <h1>Best results !</h1>
         </div>
         <div class="result-list"></div>
       </div>
